# sagascript

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INSTALLING.md  LICENSE  PROMPT.md  Package.swift  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: architect.md  github-devops.md  performance-engineer.md  product-manager.md  qa-engineer.md  security-reviewer.md
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  sbom.yml
AppBundle/: Info.plist
Sources/FlowDictate/: BuildInfo.swift  FlowDictateApp.swift
Sources/FlowDictate/Hotkeys/: CGEventTapHotkeyService.swift  Shortcut.swift
Sources/FlowDictate/Models/: AnyCodable.swift  AppState.swift  Language.swift  LogEvents.swift
Sources/FlowDictate/Services/: AppController.swift  AudioCaptureService.swift  BenchmarkService.swift  HotkeyService.swift  KeychainService.swift  LaunchAtLoginService.swift  LoggingService.swift  ModelDownloadService.swift  OpenAIBackend.swift  PasteService.swift  SettingsManager.swift  SettingsWindowController.swift  TranscriptionService.swift  WhisperCppBackend.swift  WhisperKitBackend.swift
Sources/FlowDictate/Views/: HotkeyRecorderView.swift  MainWindowView.swift  MenuBarView.swift  RecordingOverlayWindow.swift  SettingsView.swift
Tests/FlowDictateTests/: AppStateTests.swift  DictationErrorTests.swift  HotkeyRecorderTests.swift  KeychainServiceTests.swift  LanguageTests.swift  SettingsManagerTests.swift
docs/: 00_START_HERE.md  01_AUTONOMY_PLAYBOOK.md  02_REQUIREMENTS_SEED.md  03_MODEL_RESEARCH.md  04_ARCHITECTURE_SEED.md  05_TEST_CASES_SEED.md  06_GITHUB_AUTOMATION.md  07_PERFORMANCE_PLAN.md  08_SECURITY_PRIVACY_PLAN.md  09_UI_UX_GUIDE.md  10_DEFINITION_OF_DONE.md  ARCHITECTURE.md  BENCHMARKS.md  BLOCKERS.md  DECISIONS.md  GITHUB_SETUP.md  INSTANCE_LOG.md  NFRS.md  PRD.md  SECURITY_PRIVACY.md  STATUS.md  TEST_PLAN.md  installation.md  linux-notes.md  model-sources.md  windows-notes.md  windows-port-plan.md
docs/plans/: accuracy-1-model-upgrade.md  accuracy-2-custom-vocabulary.md  accuracy-3-vad.md  competitive-landscape.md  rust-rewrite-feasibility.md
flowdictate-tauri/: package-lock.json  package.json  vite.config.ts
flowdictate-tauri/src/: App.svelte  app.css
flowdictate-tauri/src-tauri/: Cargo.toml  tauri.conf.json
flowdictate-tauri/src-tauri/capabilities/: default.json
flowdictate-tauri/src-tauri/src/: app_controller.rs  commands.rs  error.rs  events.rs  main.rs  overlay.rs
flowdictate-tauri/src-tauri/src/audio/: capture.rs  decoder.rs  mod.rs  resample.rs  wav.rs
flowdictate-tauri/src-tauri/src/cli/: config.rs  mod.rs  models.rs  record.rs  transcribe.rs
flowdictate-tauri/src-tauri/src/credentials/: keyring_service.rs
flowdictate-tauri/src-tauri/src/hotkey/: mod.rs  service.rs
flowdictate-tauri/src-tauri/src/logging/: log_events.rs  service.rs
flowdictate-tauri/src-tauri/src/paste/: service.rs
flowdictate-tauri/src-tauri/src/platform/: macos.rs  windows.rs
flowdictate-tauri/src-tauri/src/settings/: manager.rs  store.rs
flowdictate-tauri/src-tauri/src/transcription/: backend.rs  mod.rs  model.rs  whisper_backend.rs
flowdictate-tauri/src/lib/: Onboarding.svelte  Overlay.svelte  Settings.svelte  api.ts
flowdictate-tauri/test-audio/: README.md
scripts/: build-app.sh  build-frontend.mjs  check-release.mjs  generate-third-party-notices.mjs  print_start_commands.sh  reset-macos-permissions.sh  smoke-installed-macos-cli.sh  test-onboarding-download-state.mjs  test-verify-audio-entitlement.sh  verify-macos-release.sh
security-review/: FINDINGS-AGREED.md  FINDINGS-DISAGREED.md  prompt-round-0.md  prompt-round-2.md  round-0-codex.md  round-1-claude.md  round-2-codex.md  round-3-claude.md
src/: App.svelte  app.css
src-tauri/: .taurignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/sagascript-cli/: Cargo.toml  build.rs
src-tauri/crates/sagascript-cli/src/: config.rs  lib.rs  main.rs  models.rs  record.rs  transcribe.rs
src-tauri/crates/sagascript-core/: Cargo.toml
src-tauri/crates/sagascript-core/src/: download.rs  error.rs  lib.rs
src-tauri/crates/sagascript-core/src/audio/: capture.rs  decoder.rs  mod.rs  resample.rs  wav.rs
src-tauri/crates/sagascript-core/src/diarization/: clustering.rs  embedding.rs  merge.rs  mod.rs  model.rs  segmentation.rs
src-tauri/crates/sagascript-core/src/settings/: manager.rs  store.rs
src-tauri/crates/sagascript-core/src/transcription/: metal_preflight.rs  mod.rs  model.rs  postprocess.rs  whisper_backend.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_controller.rs  commands.rs  error.rs  events.rs  main.rs  overlay.rs
src-tauri/src/audio/: capture.rs  decoder.rs  mod.rs  resample.rs
src-tauri/src/cli/: config.rs  mod.rs  models.rs  transcribe.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/diarization/: clustering.rs  embedding.rs  fbank.rs  mod.rs  segmentation.rs
src-tauri/src/hotkey/: health.rs  mod.rs  service.rs
src-tauri/src/logging/: log_events.rs  mod.rs  service.rs
src-tauri/src/paste/: macos_clipboard.rs  mod.rs  service.rs
src-tauri/src/platform/: linux.rs  macos.rs  windows.rs
src-tauri/src/settings/: manager.rs  mod.rs
src-tauri/src/transcription/: mod.rs  model.rs  openai_backend.rs  whisper_backend.rs
src/lib/: Onboarding.svelte  Settings.svelte  api.ts  onboarding-download-state.js
test-audio/: README.md
test-audio/diarization/: README.md  dj_2022_feu_ref.rttm  dj_2022_feu_ref.stm  dj_2022_feu_ref_transcript.txt  fetch.sh  nb_samtale_nb12_ref.rttm  nb_samtale_nb12_ref.stm  nb_samtale_nb12_ref_transcript.txt
