[package]
name = "sagascript"
version = "0.0.1"
edition = "2021"
description = "Low-latency macOS/Windows dictation app"
license = "MIT"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
cpal = "0.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
arboard = "3"
enigo = { version = "0.6", features = ["serde"] }
dirs = "6"
futures-util = "0.3"
num_cpus = "1"
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
clap_mangen = "0.2"
ctrlc = "3"
indicatif = "0.17"
notify = { version = "7", default-features = false }
tauri-plugin-dialog = "2"
symphonia = { version = "0.5", features = ["aac", "alac", "flac", "mp3", "pcm", "vorbis", "isomp4", "mkv", "ogg"] }
rubato = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["coreml", "metal"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15" }
notify = { version = "7" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
