# Workspace root AND the Tauri app package. The root package stays at
# src-tauri/Cargo.toml so the Tauri CLI's convention-based discovery,
# Cargo.lock, target/, and every CI path keep working unchanged.
#
# Members:
#   .                        — this package: the desktop app (Tauri GUI + CLI dispatch)
#   crates/sagascript-core   — lib: audio, transcription, settings, diarization, error
#   crates/sagascript-cli    — lib + headless `sagascript` bin (no Tauri)
#
# Bare `cargo build/test/clippy` here operates on the app package only (root
# package default; `default-members` documents it). Use `--workspace` or `-p`
# to cover the member crates — see CONTRIBUTING.md.
[workspace]
members = [".", "crates/*"]
default-members = ["."]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[package]
name = "sagascript"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Low-latency macOS/Linux/Windows dictation app"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
sagascript-core = { path = "crates/sagascript-core", features = ["record"] }
sagascript-cli = { path = "crates/sagascript-cli" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
arboard = "3"
dirs = "6"
notify = { version = "7", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
# notify 7 requires one native macOS backend feature even when this app uses
# PollWatcher explicitly for settings (see start_settings_watcher).
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
# enigo (auto-paste) and the objc FFI stack are desktop-GUI integrations.
enigo = { version = "0.6", features = ["serde"] }
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"
block = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
notify = { version = "7" }
enigo = { version = "0.6", features = ["serde"] }

# Linux GUI build: auto-paste shells out to `xdotool` (no enigo — its X11
# backend leaves the Control modifier unmapped). `notify` gets its default
# (inotify) backend for the settings watcher.
[target.'cfg(target_os = "linux")'.dependencies]
notify = { version = "7" }

[lints]
workspace = true

[features]
# `diarization` default-on to match the CLI (#81): a plain `cargo tauri build`
# .app ships with speaker diarization available.
default = ["custom-protocol", "diarization"]
custom-protocol = ["tauri/custom-protocol"]
diarization = ["sagascript-core/diarization", "sagascript-cli/diarization"]

# Optimize the Rust DSP/glue (rubato resampler, symphonia decode, audio mixing)
# in release builds. whisper.cpp itself is compiled -O3 by whisper-rs's build
# script in release; use `cargo tauri build` for production (`cargo tauri dev`
# stays unoptimized). `panic = "abort"` is intentionally NOT set so a panic in
# the blocking transcription thread still unwinds into a JoinError rather than
# killing the whole app.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
