[package]
name = "flowdictate"
version = "0.1.0"
edition = "2021"
description = "Low-latency macOS/Windows dictation app"
license = "MIT"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
cpal = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
arboard = "3"
enigo = { version = "0.2", features = ["serde"] }
keyring = { version = "3", features = [] }
dirs = "6"
async-trait = "0.1"
futures-util = "0.3"
num_cpus = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
tauri-plugin-dialog = "2"
symphonia = { version = "0.5", features = ["aac", "alac", "flac", "mp3", "pcm", "vorbis", "isomp4", "mkv", "ogg"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["coreml", "metal"] }

core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
