[package]
name = "sagascript-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core transcription engine for Sagascript: audio decode/capture, Whisper backend, settings, diarization"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "6"
fs2 = "0.4"
futures-util = "0.3"
sha2 = "0.10"
num_cpus = "1"
symphonia = { version = "0.5", features = ["aac", "alac", "flac", "mp3", "pcm", "vorbis", "isomp4", "mkv", "ogg"] }
rubato = "0.14"

# Live audio capture (optional): a pure batch-transcribe build
# (`--no-default-features` on sagascript-cli) needs no cpal — and on Linux, no ALSA.
cpal = { version = "0.15", optional = true }

# Diarization (optional, behind feature flag)
ort = { version = "2.0.0-rc.12", features = ["ndarray"], optional = true }
rustfft = { version = "6", optional = true }
kodama = { version = "0.2", optional = true }
ndarray = { version = "0.17", optional = true }

# whisper-rs is declared per-target because macOS enables Metal/CoreML;
# Windows and Linux use the CPU backend (Vulkan is a separate, currently-broken opt-in).
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["coreml", "metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15" }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.15" }

[features]
default = []
record = ["dep:cpal"]
diarization = ["dep:ort", "dep:rustfft", "dep:kodama", "dep:ndarray"]

[lints]
workspace = true
